<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ZooGate$PlaceholderFragment"
    android:id="@+id/section_layout">

    <Switch
        android:background="@android:color/transparent"
        android:button="@null"
        android:padding="20dp"
        android:theme="@style/ColorSwitchStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_blocker_title"
        android:id="@+id/ad_switch"
        android:checked="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:layout_alignEnd="@+id/line"
        android:longClickable="true"
        android:trackTint="@android:color/black"
        android:thumbTint="@color/primary_color"
        android:thumbTintMode="src_over"
        android:trackTintMode="src_over"
        android:showText="true"
        android:splitTrack="false" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:id="@+id/line"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/ad_switch"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri|textMultiLine"
        android:ems="10"
        android:id="@+id/whitelist"
        android:enabled="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/whitelist_label"
        android:layout_alignParentStart="true"
        android:lines="4"
        android:linksClickable="false"
        android:gravity="top|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ad_blocker_allow"
        android:id="@+id/whitelist_label"
        android:layout_below="@+id/line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:labelFor="@id/whitelist"
        android:textColor="@color/blackness"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textUri|textMultiLine"
        android:ems="10"
        android:id="@+id/blacklist"
        android:enabled="true"
        android:lines="4"
        android:linksClickable="false"
        android:layout_below="@+id/blacklist_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="top|start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ad_blocker_deny"
        android:id="@+id/blacklist_label"
        android:layout_below="@+id/whitelist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:labelFor="@id/blacklist"
        android:textColor="@color/blackness"
        android:shadowColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView11"
        android:layout_below="@+id/blacklist"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/ad_blocker_help"
        android:layout_marginTop="15dp"
        android:layout_alignParentBottom="true"
        android:inputType="none" />


</RelativeLayout>
