<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ZooGate$PlaceholderFragment"
    android:id="@+id/section_layout">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_manager_title"
        android:id="@+id/update_switch"
        android:checked="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textAlignment="center"
        android:layout_alignParentStart="true"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:trackTint="@android:color/black"
        android:thumbTint="@color/primary_color"
        android:thumbTintMode="src_over"
        android:trackTintMode="src_over"
        android:showText="true"
        android:splitTrack="false" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/update_switch"
        android:background="#000000"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:minWidth="50dp"
        android:text="Unknown"
        android:id="@+id/now_available"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/check_time" />

    <Button
        android:layout_width="100sp"
        android:layout_height="50dp"
        android:text="@string/fetch_rom"
        android:id="@+id/button_fetch"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/last_check_date"
        android:layout_alignBottom="@+id/avail_release_image"
        android:layout_toEndOf="@+id/avail_release_image"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Now Available:"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Last Check:"
        android:id="@+id/textView9"
        android:layout_below="@+id/check_time"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Never"
        android:id="@+id/last_check_date"
        android:layout_below="@+id/check_time"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/install_after_fetch"
        android:id="@+id/install_after_fetch_switch"
        android:checked="true"
        android:layout_marginRight="0dp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:trackTint="@android:color/black"
        android:thumbTint="@color/primary_color"
        android:thumbTintMode="src_over"
        android:trackTintMode="src_over"
        android:showText="true"
        android:splitTrack="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/auto_reboot_switch"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_reboot_after_install"
        android:id="@+id/auto_reboot_switch"
        android:checked="false"
        android:layout_marginRight="0dp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:trackTint="@android:color/black"
        android:thumbTint="@color/primary_color"
        android:thumbTintMode="src_over"
        android:trackTintMode="src_over"
        android:showText="true"
        android:splitTrack="false"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/install_after_fetch_switch"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="110sp"
        android:layout_height="50dp"
        android:text="Reboot Now !"
        android:id="@+id/button_reboot"
        android:layout_alignParentBottom="false"
        android:layout_alignEnd="@+id/auto_reboot_switch"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/download_switch" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Check daily at:  (hh:mm)"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/check_time"
        android:text="2:05"
        android:textAlignment="textEnd"
        android:singleLine="true"
        android:layout_alignTop="@+id/view"
        android:layout_alignParentEnd="true"
        android:gravity="left" />

    <ImageView
        android:layout_width="165dp"
        android:layout_height="160dp"
        android:id="@+id/avail_release_image"
        android:src="@drawable/current_release"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:padding="1dp"
        android:scaleType="fitXY"
        android:background="@drawable/border_image"
        android:layout_marginRight="5dp"
        android:alpha="0.65" />

    <Button
        android:layout_width="100sp"
        android:layout_height="50dp"
        android:text="@string/view_changelog"
        android:id="@+id/button_changelog"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/avail_release_image"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@+id/avail_release_image" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_avail"
        android:id="@+id/download_switch"
        android:checked="true"
        android:layout_marginRight="0dp"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:trackTint="@android:color/black"
        android:thumbTint="@color/primary_color"
        android:thumbTintMode="src_over"
        android:trackTintMode="src_over"
        android:showText="true"
        android:splitTrack="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_above="@+id/install_after_fetch_switch" />


</RelativeLayout>
